# rag_project

./: RAGV2.ipynb  README.md  pyproject.toml  rag.py
store/86bbb2ab-9ec2-4a65-aa61-d49cb2f142dc/: index_metadata.pickle
